GET migration records
