# packages/data-provider/src/controllers/migrationController.ts
@@ -2,7 +2,11 @@ import { BaseDependencies } from '../config/config.js';
 import createMigrationService from '../services/migrationService.js';
 import { NotFound } from '../utils/errors.js';
 import { validateRequest } from '../utils/requestValidation.js';
-import { migrationByIdRequestSchema, migrationsByCategoryIdRequestSchema } from '../utils/schemas.js';
+import {
+	migrationByIdRequestSchema,
+	migrationDataRequestSchema,
+	migrationsByCategoryIdRequestSchema,
+} from '../utils/schemas.js';
 
 const controller = (dependencies: BaseDependencies) => {
 	const migrationService = createMigrationService(dependencies);
@@ -50,6 +54,45 @@ const controller = (dependencies: BaseDependencies) => {
 						totalRecords: submissions.metadata.totalRecords,
 					},
 					records: submissions.result,
+				};
+
+				return res.send(response);
+			} catch (error) {
+				next(error);
+			}
+		}),
+		getMigrationRecords: validateRequest(migrationDataRequestSchema, async (req, res, next) => {
+			try {
+				const migrationId = Number(req.params.migrationId);
+
+				const page = parseInt(String(req.query.page)) || defaultPage;
+				const pageSize = parseInt(String(req.query.pageSize)) || defaultPageSize;
+				const entityNames = req.query.entityNames;
+				const organizations = req.query.organizations;
+				const isInvalid = req.query.isInvalid === 'true';
+
+				logger.info(LOG_MODULE, `Request Data Migration id '${migrationId}'`);
+
+				const submissionRecords = await migrationService.getMigrationRecords(migrationId, {
+					page,
+					pageSize,
+					entityNames,
+					organizations,
+					isInvalid,
+				});
+
+				if (submissionRecords.result.length === 0) {
+					throw new NotFound('Records not found for the specified migration');
+				}
+
+				const response = {
+					pagination: {
+						currentPage: page,
+						pageSize: pageSize,
+						totalPages: Math.ceil(submissionRecords.metadata.totalRecords / pageSize),
+						totalRecords: submissionRecords.metadata.totalRecords,
+					},
+					records: submissionRecords.result,
 				};
 
 				return res.send(response);
